--- a/Pol'ka Vladislav/style.css
+++ b/Pol'ka Vladislav/style.css
@@ -609,6 +609,32 @@ header {
 	transition: 0.2s;
 }
 
+.p9 {
+	text-align: center;
+	position: absolute;
+	text-decoration: none;
+	color: #000;
+	font-size: 55px;
+	top: 295px;
+	left: -300px;
+	width: 135px;
+	background-color: #4172FE;
+	border-radius: 10px;
+} 
+
+.p9:hover {
+	border-bottom: 3px solid black;
+	border-radius: 10px;
+	transform: scale(1.1);
+	transition: 0.2s;
+}
+
+.p9:not(:hover) {
+	border-bottom: none;
+	transform: scale(1);
+	transition: 0.2s;
+}
+
 .palka2 {
 	position: absolute;
 	margin: 0 auto;
@@ -899,7 +925,7 @@ footer {
 
 	.p6 {
 		top: 140px;
-		width: 240px;
+		width: 170px;
 		font-size: 42px;
 	}
 
@@ -924,7 +950,7 @@ footer {
 	}
 
 	.p6 {
-		left: 136px;
+		left: 115px;
 	}
 
 	.p7 {
@@ -935,7 +961,14 @@ footer {
 	}
 
 	.p8 {
-		left: -150px;
+		left: -170px;
+		top: 210px;
+		width: 125px;
+		font-size: 42px;
+	}
+
+	.p9 {
+		left: -30px;
 		top: 210px;
 		width: 125px;
 		font-size: 42px;
