--- a/Pol'ka Vladislav/style.css
+++ b/Pol'ka Vladislav/style.css
@@ -635,6 +635,32 @@ header {
 	transition: 0.2s;
 }
 
+.p10 {
+	text-align: center;
+	position: absolute;
+	text-decoration: none;
+	color: #000;
+	font-size: 55px;
+	top: 295px;
+	left: -140px;
+	width: 200px;
+	background-color: #7CFFF3;
+	border-radius: 10px;
+} 
+
+.p10:hover {
+	border-bottom: 3px solid black;
+	border-radius: 10px;
+	transform: scale(1.1);
+	transition: 0.2s;
+}
+
+.p10:not(:hover) {
+	border-bottom: none;
+	transform: scale(1);
+	transition: 0.2s;
+}
+
 .palka2 {
 	position: absolute;
 	margin: 0 auto;
@@ -934,11 +960,11 @@ footer {
 	}
 
 	.p2 {
-		left: -50px;
+		left: -70px;
 	}
 
 	.p3 {
-		left: 185px;
+		left: 145px;
 	}
 
 	.p4 {
@@ -946,11 +972,11 @@ footer {
 	}
 
 	.p5 {
-		left: -75px;
+		left: -95px;
 	}
 
 	.p6 {
-		left: 115px;
+		left: 95px;
 	}
 
 	.p7 {
@@ -971,6 +997,13 @@ footer {
 		left: -30px;
 		top: 210px;
 		width: 125px;
+		font-size: 42px;
+	}
+
+	.p10 {
+		left: 110px;
+		top: 210px;
+		width: 150px;
 		font-size: 42px;
 	}
 
