Pol'ka Vladislav

--- a/Pol'ka Vladislav/style.css
+++ b/Pol'ka Vladislav/style.css
@@ -773,6 +773,31 @@ header {
 	transition: 0.2s;
 }
 
+.hm4 {
+	text-align: center;
+	position: absolute;
+	text-decoration: none;
+	color: #000;
+	font-size: 55px;
+	top: 200px;
+	left: 160px;
+	width: 210px;
+	border-radius: 10px;
+} 
+
+.hm4:hover {
+	border-bottom: 3px solid black;
+	border-radius: 10px;
+	transform: scale(1.1);
+	transition: 0.2s;
+}
+
+.hm4:not(:hover) {
+	border-bottom: none;
+	transform: scale(1);
+	transition: 0.2s;
+}
+
 footer {
 	position: fixed;
 	left: 0; bottom: 0;
@@ -1044,6 +1069,13 @@ footer {
 
 	.hm3 {
 		left: -130px;
+	}
+
+	.hm4 {
+		font-size: 42px;
+		width: 150px;
+		top: 140px;
+		left: 75px;
 	}
 
 }
