--- a/KapitalininMaxim/about.css
+++ b/KapitalininMaxim/about.css
@@ -1,4 +1,5 @@
 a {
+	top: 10%;
 	font-size: 200%;
 	background-color: #800080;
     -webkit-background-clip: text;
@@ -8,5 +9,69 @@ a {
     text-shadow: rgba(255,255,255,0.5) 0px 3px 3px;
 }
 body {
-	background: #000000;
-	}
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: mediumturquoise;
+  font-family: Georgia;
+  background-color: #000000;
+}
+h1 {
+  display: inline-block;
+  position: relative;
+  letter-spacing: .05em;
+  font-size: 50px;
+  cursor: pointer;
+  text-shadow: 1px 1px mediumturquoise,
+               -1px 1px mediumturquoise,
+               -1px -1px mediumturquoise,
+               1px -1px mediumturquoise;
+  color: white;
+  transition: all 1s;
+}
+h1:before {
+    content: "";
+    position: absolute;
+    top: 0px;
+    right: -15px;
+    bottom: -15px;
+    left: 0;
+    z-index: -1;
+    background: linear-gradient(-45deg,
+      rgba(72, 209, 204, 0) 2px,
+      mediumturquoise 3px,
+      rgba(72, 209, 204, 0) 3px ) repeat;
+    background-size: 4px 4px;
+}
+h1:after {
+    content: attr(data-name);
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    z-index: -2;
+    text-shadow: 1px 1px white,
+                 2px 2px white,
+                 3px 3px white,
+                 4px 4px white;
+    color: white;
+    transition: all 1s;
+}
+h1:hover {
+    color: lemonchiffon;
+}
+h1:hover:before {
+      animation: 5s move_lines infinite linear;
+}
+h1:hover:after {
+      color: lemonchiffon;
+      text-shadow: 1px 1px lemonchiffon,
+        2px 2px lemonchiffon,
+        3px 3px lemonchiffon,
+        4px 4px lemonchiffon;
+}
+
+@keyframes move_lines {
+  100% {
+    background-position: 40px 40px;
+  }
+}
