--- a/MokhnatkinDanila/Sayt.css
+++ b/MokhnatkinDanila/Sayt.css
@@ -11,7 +11,7 @@ header img{
 .avatarka img{
 	height: 200px;
 	width: 250px;
-	border-radius: 50 40 50 50;
+	border-radius: 50%;
 }
 .gradient{
     font-family: 'montserrat';
@@ -75,4 +75,9 @@ header img{
 	display: inline-block;*/
 	font-size: 140%;
 	}
-
+.down h5:hover{
+	font-size: 130%;
+}
+.down h5(:not):hover{
+	font-size: 100%;
+}
