--- a/Pol'ka Vladislav/style.css
+++ b/Pol'ka Vladislav/style.css
@@ -661,6 +661,32 @@ header {
 	transition: 0.2s;
 }
 
+.p11 {
+	text-align: center;
+	position: absolute;
+	text-decoration: none;
+	color: #000;
+	font-size: 55px;
+	top: 295px;
+	left: 85px;
+	width: 100px;
+	background-color: #E0FF9A;
+	border-radius: 10px;
+} 
+
+.p11:hover {
+	border-bottom: 3px solid black;
+	border-radius: 10px;
+	transform: scale(1.1);
+	transition: 0.2s;
+}
+
+.p11:not(:hover) {
+	border-bottom: none;
+	transform: scale(1);
+	transition: 0.2s;
+}
+
 .palka2 {
 	position: absolute;
 	margin: 0 auto;
@@ -966,7 +992,7 @@ footer {
 	}
 
 	.p3 {
-		width: 220px;
+		width: 170px;
 	}
 
 	.p4, .p5 {
@@ -1031,6 +1057,14 @@ footer {
 		width: 150px;
 		font-size: 42px;
 	}
+
+	.p11 {
+		left: 280px;
+		top: 140px;
+		width: 100px;
+		font-size: 42px;
+	}
+
 
 	.palka2 {
 		top: 415px;
