--- a/Pol'ka Vladislav/style.css
+++ b/Pol'ka Vladislav/style.css
@@ -364,6 +364,30 @@ header {
 	transition: 0.2s;
 }
 
+.t12 {
+	text-align: center;
+	position: absolute;
+	text-decoration: none;
+	color: #000;
+	font-size: 55px;
+	top: 275px;
+	left: -55px;
+	width: 75px;
+} 
+
+.t12:hover {
+	border-bottom: 3px solid black;
+	border-radius: 10px;
+	transform: scale(1.1);
+	transition: 0.2s;
+}
+
+.t12:not(:hover) {
+	border-bottom: none;
+	transform: scale(1);
+	transition: 0.2s;
+}
+
 .palka {
 	position: absolute;
 	margin: 0 auto;
@@ -943,6 +967,12 @@ footer {
 		top: 190px;
 	}
 
+	.t12 {
+		width: 60px;
+		font-size: 42px;
+		top: 190px;
+	}
+
 	.t6 {
 		left: -110px;
 	}
@@ -965,6 +995,10 @@ footer {
 
 	.t11 {
 		left: -110px;
+	}
+
+	.t12 {
+		left: -42px;
 	}
 
 	.palka {
