--- a/Klitvin Aleksandr/сайт/style.css
+++ b/Klitvin Aleksandr/сайт/style.css
@@ -80,6 +80,9 @@ section:hover{
 .eleven{
   background-color:#5E5D37;
 }
+.tvelve{
+  background-color: grey;
+}
 .wrapper {
   position: relative;
   overflow-x: hidden;
