--- a/Daniil Dorofeev/css/style.css
+++ b/Daniil Dorofeev/css/style.css
@@ -1,6 +1,7 @@
 body {
 	background-color: #f5f5f5;
 	font-family: 'Montserrat',  sans-serif;
+	transition: 0.3s;
 }
 
 .container {
@@ -14,10 +15,15 @@ body {
 	flex-direction: column;
 }
 
+i {
+	transition: 0.3s;
+}
+
 .block {
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 	background-color: white;
 	margin: 10px;
+	transition: 0.3s;
 }
 
 .menu-top h1 {
@@ -317,16 +323,4 @@ a {
 	line-height: 25px;
 	color: #222;
 	transition: 0.3s;
-}
-
-.theme:hover {
-	background-color: #444;
-}
-
-.theme:hover p {
-	color: #ddd !important;
-}
-
-.theme:hover i {
-	color: #ddd !important;
 }
