--- a/Kirill Rusanov/css/style.css
+++ b/Kirill Rusanov/css/style.css
@@ -153,7 +153,7 @@ h1, h2, h3, h4, h5, h6 {
   position: absolute;
   content: "";
   height: 0;
-  background: #17e7a4;
+  background: #0f37de;
   z-index: -1;
   top: 0;
   left: 0;
