--- a/Pol'ka Vladislav/style.css
+++ b/Pol'ka Vladislav/style.css
@@ -412,6 +412,30 @@ header {
 	transition: 0.2s;
 }
 
+.t14 {
+	text-align: center;
+	position: absolute;
+	text-decoration: none;
+	color: #000;
+	font-size: 55px;
+	top: 275px;
+	left: 128px;
+	width: 75px;
+} 
+
+.t14:hover {
+	border-bottom: 3px solid black;
+	border-radius: 10px;
+	transform: scale(1.1);
+	transition: 0.2s;
+}
+
+.t14:not(:hover) {
+	border-bottom: none;
+	transform: scale(1);
+	transition: 0.2s;
+}
+
 .palka {
 	position: absolute;
 	margin: 0 auto;
@@ -1002,6 +1026,11 @@ footer {
 		font-size: 42px;
 		top: 200px;
 	}
+	.t14 {
+		width: 60px;
+		font-size: 42px;
+		top: 200px;
+	}
 
 	.t6 {
 		left: -110px;
@@ -1033,6 +1062,10 @@ footer {
 
 	.t13 {
 		left: 28px;
+	}
+
+	.t14 {
+		left: 98px;
 	}
 
 	.palka {
