--- a/MokhnatkinDanila/Sayt.css
+++ b/MokhnatkinDanila/Sayt.css
@@ -47,7 +47,7 @@ header img{
 .spisok{
 	height: 500px;
 	width: 450px;
-	border: 3px solid black;
+	
 	
 }
 .spisok a{
@@ -70,13 +70,11 @@ header img{
 	padding: 15px;
 }
 .awesome{
-	border: 3px solid red;
 	width: 300px;
 }
 .awesome a{
-	display: flex;
-	align-items: center;
-	justify-content: center;
+	position: absolute;
+	
 	width: 30px;
   	height: 30px;
 	border-radius: 50%;
@@ -131,7 +129,7 @@ visibility: visible;
 }
 
 .path1{
-  height: 450px;
+  height: 500px;
   width: 100%;
 background:  linear-gradient(45deg, deeppink, yellow, lime);
 
@@ -158,7 +156,7 @@ background:  linear-gradient(45deg, deeppink, yellow, lime);
 #anchor2{
   position: relative;
   margin-left: 30%;
-  width: 500px;
+  width: 580px;
   height: 300px;
   padding: 1px;
 }
