--- a/MokhnatkinDanila/Sayt.css
+++ b/MokhnatkinDanila/Sayt.css
@@ -85,7 +85,7 @@ header img{
 	}
 
 .down h5{
-	margin-top: 15%;
+	margin-top: 16%;
 width: 150px;
 }
 
@@ -106,8 +106,8 @@ height: 400px;
     
     visibility: hidden;
     position: absolute;
-    left: 40%;
-    bottom: -300px;
+    left: 30%;
+    bottom: 200px;
     border-radius: 5px;
     width: 20%;
     z-index: 9999;
@@ -160,4 +160,28 @@ background:  linear-gradient(45deg, deeppink, yellow, lime);
   width: 580px;
   height: 300px;
   padding: 1px;
+}
+
+.path3{
+	height: 450px;
+  width: 100%;
+  background: linear-gradient(45deg, green, yellow);
+}
+
+#anchor3{
+	 position: relative;
+  margin-left: 30%;
+  width: 580px;
+  height: 300px;
+  padding: 1px;
+}
+
+#anchor3 h2{
+	display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.redacher{
+	padding: 20px, 40%;
 }
