Klitvin work VAL

--- a/Klitvin Aleksandr/сайт/style.css
+++ b/Klitvin Aleksandr/сайт/style.css
@@ -97,6 +97,12 @@ a {
 .threten{
   background-color: #5E5D37;
 }
+.fourteen{
+  background-color: #37435E;
+}
+
+
+
 .wrapper {
   position: relative;
   overflow-x: hidden;
