--- a/Pol'ka Vladislav/style.css
+++ b/Pol'ka Vladislav/style.css
@@ -436,6 +436,30 @@ header {
 	transition: 0.2s;
 }
 
+.t15 {
+	text-align: center;
+	position: absolute;
+	text-decoration: none;
+	color: #000;
+	font-size: 55px;
+	top: 275px;
+	left: 218px;
+	width: 75px;
+} 
+
+.t15:hover {
+	border-bottom: 3px solid black;
+	border-radius: 10px;
+	transform: scale(1.1);
+	transition: 0.2s;
+}
+
+.t15:not(:hover) {
+	border-bottom: none;
+	transform: scale(1);
+	transition: 0.2s;
+}
+
 .palka {
 	position: absolute;
 	margin: 0 auto;
@@ -759,6 +783,32 @@ header {
 	transition: 0.2s;
 }
 
+.p12 {
+	text-align: center;
+	position: absolute;
+	text-decoration: none;
+	color: #000;
+	font-size: 55px;
+	top: 295px;
+	left: 210px;
+	width: 170px;
+	background-color: #01a3a4;
+	border-radius: 10px;
+} 
+
+.p12:hover {
+	border-bottom: 3px solid black;
+	border-radius: 10px;
+	transform: scale(1.1);
+	transition: 0.2s;
+}
+
+.p12:not(:hover) {
+	border-bottom: none;
+	transform: scale(1);
+	transition: 0.2s;
+}
+
 .palka2 {
 	position: absolute;
 	margin: 0 auto;
@@ -1032,6 +1082,12 @@ footer {
 		top: 200px;
 	}
 
+	.t15 {
+		width: 60px;
+		font-size: 42px;
+		top: 200px;
+	}
+
 	.t6 {
 		left: -110px;
 	}
@@ -1066,6 +1122,10 @@ footer {
 
 	.t14 {
 		left: 98px;
+	}
+
+	.t15 {
+		left: 168px;
 	}
 
 	.palka {
@@ -1163,6 +1223,13 @@ footer {
 		left: 280px;
 		top: 150px;
 		width: 100px;
+		font-size: 42px;
+	}
+
+	.p12 {
+		left: 275px;
+		top: 220px;
+		width: 130px;
 		font-size: 42px;
 	}
 
