Pol'ka Vladislav

--- a/Pol'ka Vladislav/style.css
+++ b/Pol'ka Vladislav/style.css
@@ -881,6 +881,32 @@ header {
 	transition: 0.2s;
 }
 
+.p13 {
+	text-align: center;
+	position: absolute;
+	text-decoration: none;
+	color: #000;
+	font-size: 55px;
+	top: 295px;
+	left: 405px;
+	width: 125px;
+	background-color: #1dd1a1;
+	border-radius: 10px;
+} 
+
+.p13:hover {
+	border-bottom: 3px solid black;
+	border-radius: 10px;
+	transform: scale(1.1);
+	transition: 0.2s;
+}
+
+.p13:not(:hover) {
+	border-bottom: none;
+	transform: scale(1);
+	transition: 0.2s;
+}
+
 .palka2 {
 	position: absolute;
 	margin: 0 auto;
@@ -1013,6 +1039,31 @@ header {
 }
 
 .hm4:not(:hover) {
+	border-bottom: none;
+	transform: scale(1);
+	transition: 0.2s;
+}
+
+.hm5 {
+	text-align: center;
+	position: absolute;
+	text-decoration: none;
+	color: #000;
+	font-size: 55px;
+	top: 295px;
+	left: -95px;
+	width: 210px;
+	border-radius: 10px;
+} 
+
+.hm5:hover {
+	border-bottom: 3px solid black;
+	border-radius: 10px;
+	transform: scale(1.1);
+	transition: 0.2s;
+}
+
+.hm5:not(:hover) {
 	border-bottom: none;
 	transform: scale(1);
 	transition: 0.2s;
@@ -1339,6 +1390,13 @@ footer {
 		font-size: 42px;
 	}
 
+	.p13 {
+		left: 326px;
+		top: 80px;
+		width: 95px;
+		font-size: 42px;
+	}
+
 
 	.palka2 {
 		top: 415px;
@@ -1347,8 +1405,8 @@ footer {
 	}
 
 	.hm1, .hm2 {
-		font-size: 42px;
-		width: 150px;
+		font-size: 40px;
+		width: 135px;
 		top: 75px;
 	}
 
@@ -1362,28 +1420,35 @@ footer {
 	}
 
 	.hm1 {
-		left: -130px;
+		left: -135px;
 	}
 
 	.hm2 {
-		left: 40px;
+		left: 20px;
 	}
 
 	.hm3 {
-		font-size: 42px;
-		width: 150px;
-		top: 155px;
+		font-size: 40px;
+		width: 135px;
+		top: 75px;
 	}
 
 	.hm3 {
-		left: -130px;
+		left: 175px;
 	}
 
 	.hm4 {
-		font-size: 42px;
-		width: 150px;
+		font-size: 40px;
+		width: 135px;
 		top: 155px;
-		left: 40px;
+		left: -135px;
+	}
+
+	.hm5 {
+		font-size: 40px;
+		width: 135px;
+		top: 155px;
+		left: 20px;
 	}
 
 	footer {
