--- a/Churbanov/css/style.css
+++ b/Churbanov/css/style.css
@@ -31,13 +31,19 @@ img  {
 	height: calc(100%-175px);
 }
 .button {
-	margin: 10px;
-	padding: 0;
-	width: 30px;
-	height: 30px;
-	border-radius: 7px;
-	border: 2px solid black;
-	align-items: center;
+			width: 50px;
+      		height: 50px;
+      		background: #fff;
+      		border-radius: 5px;
+      		font-family: 'Arctic', cursive;
+      		color: #6C6960;
+      		overflow: hidden;
+      		border: 2px solid #6C6960;
+      		display: flex;
+      		justify-content: center;
+      		align-items: center;
+      		margin: 5px;
+      		font-size: 20px;
 }
 
 .features {
@@ -45,7 +51,7 @@ img  {
 	margin: 20px;
 	padding: 10px;
 	width: 70%;
-	height: 500px;
+	height: 300px;
 	border-radius: 20px;
 	border-color: #000;
 	border: 2px solid black;
