--- a/Pol'ka Vladislav/style.css
+++ b/Pol'ka Vladislav/style.css
@@ -933,6 +933,32 @@ header {
 	transition: 0.2s;
 }
 
+.p15 {
+	text-align: center;
+	position: absolute;
+	text-decoration: none;
+	color: #000;
+	font-size: 55px;
+	top: 390px;
+	left: -175px;
+	width: 100px;
+	background-color: #006266;
+	border-radius: 10px;
+} 
+
+.p15:hover {
+	border-bottom: 3px solid black;
+	border-radius: 10px;
+	transform: scale(1.1);
+	transition: 0.2s;
+}
+
+.p15:not(:hover) {
+	border-bottom: none;
+	transform: scale(1);
+	transition: 0.2s;
+}
+
 .palka2 {
 	position: absolute;
 	margin: 0 auto;
@@ -1444,6 +1470,20 @@ footer {
 	.p13 {
 		left: 326px;
 		top: 80px;
+		width: 95px;
+		font-size: 42px;
+	}
+
+	.p14 {
+		left: -285px;
+		top: 290px;
+		width: 95px;
+		font-size: 42px;
+	}
+
+	.p15 {
+		left: -175px;
+		top: 290px;
 		width: 95px;
 		font-size: 42px;
 	}
