--- a/Vitaliy Isaev/work2/style.css
+++ b/Vitaliy Isaev/work2/style.css
@@ -1,9 +1,12 @@
+html{
+  overflow: hidden;
+}
 body {
     margin: 0;
     font-family: sans-serif;
-  }
+}
   .section {
-    background-color: #FF1493;
+    background-color: #fff;
     color: #fff;
     height: 100vh;
     display: flex;
@@ -34,8 +37,8 @@ body {
     left: 5%;
     bottom: 0;
     transition-delay: 0.2s;
-    box-shadow: 13px 13px 32px 0 rgba(242,57,90, .3);
-    background: #FF1493 url('https://i9.wampi.ru/2019/10/05/phone.png') center no-repeat;
+    box-shadow: 13px 13px 32px 0 rgb(255, 255, 255);
+    background: #fff url('https://i9.wampi.ru/2019/10/05/phone.png') center no-repeat;
     border-radius: 22px;
     z-index:3;
   }
@@ -45,9 +48,9 @@ body {
     left: 10%;
     bottom: 0;
     transition-delay: 0.4s;
-    box-shadow: 13px 13px 32px 0 rgba(242,57,90, .3);
+    box-shadow: 13px 13px 32px 0 rgba(255, 255, 255);
     border-radius: 22px;
-    background: #FF1493 url('https://i9.wampi.ru/2019/10/05/tablet.png') center no-repeat;
+    background: #fff url('https://i9.wampi.ru/2019/10/05/tablet.png') center no-repeat;
     z-index:1;
   }
   .desktop {
@@ -56,5 +59,5 @@ body {
     left: 15%;
     bottom: 0;
     transition-delay: 0.6s;
-    background: #FF1493 url('https://i8.wampi.ru/2019/10/05/desktop.png') center no-repeat;
+    background: #fff url('https://i8.wampi.ru/2019/10/05/desktop.png') center no-repeat;
   }
